Apresentação de dados na página home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,9 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/paginas_list_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/txtpages"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loading..."
+        android:textSize="26dp"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
