Register completo e ver autor na página incompleto

--- a/app/src/main/res/layout/fragment_pagina_detalhe.xml
+++ b/app/src/main/res/layout/fragment_pagina_detalhe.xml
@@ -22,4 +22,12 @@
         android:text="Conteúdo do blog"
         android:textSize="16sp"
         android:gravity="start"/>
+
+    <TextView
+        android:id="@+id/txtAutor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Autor"
+        android:textSize="16sp"
+        android:gravity="start"/>
 </LinearLayout>
