--- a/app/src/main/res/layout/item_pagina.xml
+++ b/app/src/main/res/layout/item_pagina.xml
@@ -13,14 +13,18 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Título da Página -->
         <TextView
             android:id="@+id/txtTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Título"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
+        <!-- Texto da Página -->
         <TextView
             android:id="@+id/txtTexto"
             android:layout_width="match_parent"
@@ -31,6 +35,7 @@
             android:ellipsize="end"
             android:paddingTop="4dp"/>
 
+        <!-- Autor da Página -->
         <TextView
             android:id="@+id/txtUtilizador"
             android:layout_width="match_parent"
@@ -40,6 +45,7 @@
             android:textColor="@android:color/darker_gray"
             android:paddingTop="4dp" />
 
+        <!-- ID da Página -->
         <TextView
             android:id="@+id/txtId"
             android:layout_width="match_parent"
