--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_margin="16dp"
-        android:hint="@string/username_hint"
+        android:hint="@string/Username_text_box"
         android:inputType="text"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/register_button_text"
+        android:text="@string/create_account_button_text"
         android:textColor="@android:color/holo_blue_dark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
