--- a/app/src/main/res/layout/fragment_create_page.xml
+++ b/app/src/main/res/layout/fragment_create_page.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context=".CreatePageFragment">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp"
         android:weightSum="1"
         tools:context=".CreatePageFragment">
 
@@ -18,57 +17,60 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Criar Nova Página"
-            android:textSize="26sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:text="Criar Nova Página"
+            android:textColor="@android:color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
 
         <!-- Campo de título da página -->
         <EditText
             android:id="@+id/editTextTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:hint="Título"
             android:padding="16dp"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:layout_marginBottom="20dp"/>
+            android:maxLines="1"
+            android:inputType="text" />
+
 
         <!-- Área de texto para o corpo da página com rolagem -->
-
-        <!-- Botão para criar página no fundo -->
-
-
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
             <EditText
                 android:id="@+id/editTextTexto"
-                android:inputType="textMultiLine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="top|start"
                 android:hint="Texto"
-
+                android:inputType="textMultiLine"
                 android:padding="12dp"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+        </ScrollView>
 
-
+        <!-- Botão para criar página no fundo -->
         <Button
             android:id="@+id/buttonCreatePage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Criar Página"
-            android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:paddingStart="32dp"
-            android:paddingEnd="32dp"
             android:paddingTop="16dp"
+            android:paddingEnd="32dp"
             android:paddingBottom="16dp"
-            android:textSize="16sp"/>
+            android:text="Criar Página"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
 
     </LinearLayout>
+
 </FrameLayout>
