--- a/app/src/main/res/layout/fragment_create_page.xml
+++ b/app/src/main/res/layout/fragment_create_page.xml
@@ -7,6 +7,7 @@
     tools:context=".CreatePageFragment">
 
     <LinearLayout
+        android:id="@+id/layoutCreatePage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -72,5 +73,12 @@
             android:textSize="16sp" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
 </FrameLayout>
